c2/think
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/think/src/search.c:1906:10: error: conflicting types for 'think'
move_s * think( move_s *retstr) 
         ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/think/src/protos.h:63:8: note: previous declaration is here
move_s think (void);
       ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/think/src/search.c:2006:13: error: subscripted value is not an array, pointer, or vector
true_i_depth[0] = 0; 
~~~~~~~~~~~~^~
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/think/src/search.c:2070:10: error: use of undeclared identifier 'off_41D898'
puts( ( &off_41D898)[phase]); 
         ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/think/src/search.c:2141:12: error: expected expression
*( _OWORD *)( ( char *)&killer2[0].from + v15) = *( _OWORD *)&dummy.from; 
           ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/think/src/search.c:2141:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( ( char *)&killer2[0].from + v15) = *( _OWORD *)&dummy.from; 
   ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/think/src/search.c:2141:61: error: expected expression
*( _OWORD *)( ( char *)&killer2[0].from + v15) = *( _OWORD *)&dummy.from; 
                                                            ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/think/src/search.c:2141:53: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( ( char *)&killer2[0].from + v15) = *( _OWORD *)&dummy.from; 
                                                    ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/think/src/search.c:2142:12: error: expected expression
*( _OWORD *)( ( char *)&killer3[0].from + v15) = *( _OWORD *)&dummy.from; 
           ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/think/src/search.c:2142:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( ( char *)&killer3[0].from + v15) = *( _OWORD *)&dummy.from; 
   ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/think/src/search.c:2142:61: error: expected expression
*( _OWORD *)( ( char *)&killer3[0].from + v15) = *( _OWORD *)&dummy.from; 
                                                            ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/think/src/search.c:2142:53: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( ( char *)&killer3[0].from + v15) = *( _OWORD *)&dummy.from; 
                                                    ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/think/src/search.c:2144:12: error: expected expression
*( _OWORD *)( ( char *)&path[0].from + v15) = *( _OWORD *)&dummy.from; 
           ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/think/src/search.c:2144:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( ( char *)&path[0].from + v15) = *( _OWORD *)&dummy.from; 
   ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/think/src/search.c:2144:58: error: expected expression
*( _OWORD *)( ( char *)&path[0].from + v15) = *( _OWORD *)&dummy.from; 
                                                         ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/think/src/search.c:2144:50: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( ( char *)&path[0].from + v15) = *( _OWORD *)&dummy.from; 
                                                 ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/think/src/search.c:2168:30: error: too many arguments to function call, expected 3, have 4
search_root( &v57, v19, v20, i_depth); 
~~~~~~~~~~~                  ^~~~~~~
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/think/src/search.c:1099:1: note: 'search_root' declared here
move_s search_root (int originalalpha, int originalbeta, int depth) {
^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/think/src/search.c:2183:39: error: too many arguments to function call, expected 3, have 4
search_root( &v57, -1000000, 1000000, i_depth); 
~~~~~~~~~~~                           ^~~~~~~
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/think/src/search.c:1099:1: note: 'search_root' declared here
move_s search_root (int originalalpha, int originalbeta, int depth) {
^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/think/src/search.c:2191:39: error: too many arguments to function call, expected 3, have 4
search_root( &v57, -1000000, 1000000, i_depth); 
~~~~~~~~~~~                           ^~~~~~~
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/think/src/search.c:1099:1: note: 'search_root' declared here
move_s search_root (int originalalpha, int originalbeta, int depth) {
^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/think/src/search.c:2220:13: error: subscripted value is not an array, pointer, or vector
true_i_depth[0] = i_depth; 
~~~~~~~~~~~~^~
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/think/src/search.c:2260:25: error: too many arguments to function call, expected single argument 'compmove', have 2 arguments
proofnumbercheck( &v61, compmove); 
~~~~~~~~~~~~~~~~        ^~~~~~~~
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/think/src/protos.h:125:1: note: 'proofnumbercheck' declared here
move_s proofnumbercheck(move_s compmove);
^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/think/src/search.c:2265:44: error: use of undeclared identifier 'xmmword_41B650'
si128 = _mm_load_si128( ( const __m128i *)&xmmword_41B650); 
                                           ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/think/src/search.c:2299:5: error: assigning to '__m128i' (vector of 2 'long long' values) from incompatible type 'long long'
v42 = 0LL; 
    ^ ~~~
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/think/src/search.c:2305:5: error: assigning to '__m128i' (vector of 2 'long long' values) from incompatible type 'long long'
v42 = 0LL; 
    ^ ~~~
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/think/src/search.c:2311:75: error: invalid conversion between vector type '__m128i' (vector of 2 'long long' values) and integer type 'long long' of different size
_mm_cmpeq_epi32( _mm_load_si128( ( const __m128i *)( 4 * v43 + 6698512)), ( __m128i)0LL), 
                                                                          ^~~~~~~~~~~~~
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/think/src/search.c:2314:71: error: invalid conversion between vector type '__m128i' (vector of 2 'long long' values) and integer type 'long long' of different size
_mm_cmpeq_epi32( _mm_load_si128( ( const __m128i *)&rootlosers[v43]), ( __m128i)0LL), 
                                                                      ^~~~~~~~~~~~~
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/think/src/search.c:2318:75: error: invalid conversion between vector type '__m128i' (vector of 2 'long long' values) and integer type 'long long' of different size
_mm_cmpeq_epi32( _mm_load_si128( ( const __m128i *)( 4 * v43 + 6698528)), ( __m128i)0LL), 
                                                                          ^~~~~~~~~~~~~
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/think/src/search.c:2321:75: error: invalid conversion between vector type '__m128i' (vector of 2 'long long' values) and integer type 'long long' of different size
_mm_cmpeq_epi32( _mm_load_si128( ( const __m128i *)( 4 * v43 + 6698496)), ( __m128i)0LL), 
                                                                          ^~~~~~~~~~~~~
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/think/src/search.c:2333:75: error: invalid conversion between vector type '__m128i' (vector of 2 'long long' values) and integer type 'long long' of different size
_mm_cmpeq_epi32( _mm_load_si128( ( const __m128i *)( 4 * v43 + 6698496)), ( __m128i)0LL)), 
                                                                          ^~~~~~~~~~~~~
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/think/src/search.c:2334:1: error: invalid conversion between vector type '__m128i' (vector of 2 'long long' values) and integer type 'long long' of different size
( __m128i)-1LL); 
^~~~~~~~~~~~~~
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/think/src/search.c:2338:71: error: invalid conversion between vector type '__m128i' (vector of 2 'long long' values) and integer type 'long long' of different size
_mm_cmpeq_epi32( _mm_load_si128( ( const __m128i *)&rootlosers[v43]), ( __m128i)0LL)), 
                                                                      ^~~~~~~~~~~~~
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/think/src/search.c:2339:1: error: invalid conversion between vector type '__m128i' (vector of 2 'long long' values) and integer type 'long long' of different size
( __m128i)-1LL); 
^~~~~~~~~~~~~~
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/think/src/search.c:2363:14: error: passing 'char [8]' to parameter of incompatible type 'move_s'
comp_to_san( str, compmove); 
             ^~~
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/think/src/protos.h:119:26: note: passing argument to parameter 'move' here
void comp_to_san (move_s move, char str[]);
                         ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/think/src/search.c:2413:54: error: subscripted value is not an array, pointer, or vector
if ( ( unsigned int)( result - 1) < 5 || true_i_depth[0] <= 2 ) 
                                         ~~~~~~~~~~~~^~
33 errors generated.
make: *** [/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/think/src/obj/search.o] Error 1
